finish current feature swagger-php document
